--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2302,7 +2302,7 @@ input, select, textarea {
 			}
 
 		.icon.style1 {
-			color: #efa8b0;
+			color: #5ac18e;
 		}
 
 		.icon.style2 {
@@ -2310,7 +2310,7 @@ input, select, textarea {
 		}
 
 		.icon.style3 {
-			color: #a89cc8;
+			color: #ad813b;
 		}
 
 		.icon.style4 {
@@ -2318,7 +2318,7 @@ input, select, textarea {
 		}
 
 		.icon.style5 {
-			color: #8cc9f0;
+			color: #bada55;
 		}
 
 		@media screen and (max-width: 1680px) {
@@ -3555,12 +3555,12 @@ input, select, textarea {
 			color: #636363;
 		}
 
-		#main header.major h2:after {
+		#main header.major h2:after {  /* underline */
 			background-color: #dddddd;
-			background-image: -moz-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -webkit-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -ms-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
+			background-image: -moz-linear-gradient(90deg, #5ac18e, #ad813b, #bada55);
+			background-image: -webkit-linear-gradient(90deg, #5ac18e, #ad813b, #bada55);
+			background-image: -ms-linear-gradient(90deg, #5ac18e, #ad813b, #bada55);
+			background-image: linear-gradient(90deg, #5ac18e, #ad813b, #bada55);
 		}
 
 		#main table tbody tr {
